--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,11 @@ code {
   width: 34px;
 }
 
+.square.win {
+  background-color: green;
+  color: white;
+}
+
 .square:focus {
   outline: none;
 }
